# shriyashsharma-portfolio

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.cjs  vercel.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  boundaries.py
apps/api/app/ai/embeddings/: __init__.py  base.py  factory.py  local_provider.py  openai_provider.py
apps/api/app/ai/ingestion/: __init__.py  chunking.py  content_source.py  pipeline.py
apps/api/app/ai/llm/: __init__.py  base.py  factory.py  openai_compatible.py
apps/api/app/ai/prompts/: __init__.py  portfolio_assistant.py
apps/api/app/ai/retrieval/: __init__.py  catalog.py  intent.py  service.py
apps/api/app/api/: router.py
apps/api/app/api/dependencies/: auth.py  database.py  rate_limit.py
apps/api/app/api/routes/: __init__.py  ai_lab.py  assistant.py  (+5 more)
apps/api/app/auth/: __init__.py  boundaries.py
apps/api/app/content/: __init__.py  boundaries.py
apps/api/app/core/: config.py  deployment.py  rate_limit.py  security.py
apps/api/app/db/: base.py  database_url.py  session.py
apps/api/app/infrastructure/: __init__.py  database.py
apps/api/app/schemas/: ai_lab.py  assistant.py  auth.py  content.py  health.py  media.py  platform.py  search.py
apps/api/app/search/: __init__.py  boundaries.py
apps/api/app/services/: ai_lab_service.py  assistant_service.py  content_indexing.py  content_service.py  media_storage.py  platform_service.py  search_service.py
apps/api/app/streaming/: __init__.py  sse.py
apps/api/scripts/: check_database.py  ingest_knowledge.py  restore_backup.sh  restore_backup_to_database.sh  seed_content.py  sync_local_data_to_supabase.sh
apps/api/tests/: conftest.py  test_chunking.py  test_database_url.py  test_deployment.py  test_rate_limit.py  test_routes.py
(+265 files in other folders)
